# converter

./: .gitignore  MAC_INSTALL_EN.txt  MAC_OPEN.command  MAC_ЗАПУСК.txt  README.md  VideoConverter-linux.spec  VideoConverter-mac.spec  VideoConverter.spec  build-linux.sh  build.ps1  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run_gui.sh  video_converter.py  video_converter_gui.py  ЗАПУСТИТИ.command  ОТКРЫТЬ.command
.github/workflows/: build-linux.yml  build-mac.yml  build-windows.yml  release.yml
converter/: __init__.py  __main__.py  background.py  batch.py  cli.py  compare.py  convert.py  dnd.py  ffmpeg_utils.py  file_scan.py  filters.py  gui.py  gui_smoke.py  hardware.py  history.py  i18n.py  notifications.py  options_io.py  paths.py  platform_utils.py  presets.py  preview.py  probe.py  recovery.py  security.py  settings.py  streams.py  system_theme.py  ui_premium.py  updater.py  watch_folder.py
converter/assets/: premium-theme.json
tests/: test_batch.py  test_convert.py  test_gui_smoke.py  test_paths.py  test_probe.py  test_security.py  test_updater_security.py
