[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "video-converter"
version = "2.7.2"
description = "Аналіз та конвертація відеофайлів через FFmpeg"
readme = "requirements.txt"
requires-python = ">=3.10"

[project.optional-dependencies]
gui = [
    "customtkinter>=5.2.0",
    "tkinterdnd2>=0.4.2",
    "Pillow>=10.0.0",
    "windnd>=1.0.7; sys_platform == 'win32'",
]

[project.scripts]
video-converter = "converter.cli:main"
video-converter-gui = "converter.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["converter*"]

[tool.setuptools.package-data]
converter = ["assets/*.json"]
